# CableSwig

./: .gitattributes  CABLEConfig.cmake.in  CMakeLists.txt  CableSwigConfig.cmake.in  CheckAlloca.c  CheckStringWithStrings.c  TODO  UseCABLE.cmake.in  cableVersion.h.in
Cable/CxxTypes/: CMakeLists.txt  CMakeLists_Sources.txt  cxxArrayType.cxx  cxxConversions.h  cxxReferenceType.h  cxxUtils.h
Cable/Generators/: CMakeLists.txt  cableCvTypeWriter.cxx  cableCvTypeWriter.h  cableGenerator.h  cableSystemTools.cxx  cableSystemTools.h  cableTclGenerator.cxx
Cable/Parsers/: CMakeLists.txt  cableClass.cxx  cableClass.h  cableEnumeration.cxx  cableField.cxx  cableField.h  cableFunctionType.cxx  cableFunctionType.h  cableMethod.cxx  cableMethod.h  cableSmartPointer.h  cableSourceObject.cxx  cableSourceObject.h  cableUtils.h  cableXMLParser.cxx  cableXMLSourceElement.cxx  cableXMLSourceParser.cxx  cableXMLSourceParser.h
CableTclFacility/: CMakeLists.txt  ctAnything.h  ctArgument.cxx  ctArgument.h  ctCalls.cxx  ctCalls.h  ctCalls.txx  ctClassWrapper.cxx  ctClassWrapper.h  ctConfigureTclPackages.cmake  ctConstructor.cxx  ctConstructor.h  ctConverters.h  ctCxxObject.cxx  ctCxxObject.h  ctException.h  ctFunction.cxx  ctFunction.h  ctFunctionBase.cxx  ctFunctionBase.h  ctFunctionSelector.cxx  ctFunctionSelector.h  ctFunctionWrapper.cxx  ctFunctionWrapper.h  ctInit.cxx  ctMethod.cxx  ctMethod.h  ctStaticMethod.cxx  ctStaticMethod.h  ctTclCxxObject.cxx  ctTclCxxObject.h  ctTypeInfo.cxx  ctTypeInfo.h  ctUtils.cxx  ctUtils.h  ctWin32OutputWindow.cxx  ctWin32OutputWindow.h  ctWrapperFacility.cxx  ctWrapperFacility.h  pkgIndex.tcl.build  (+3 more)
Executables/: CMakeLists.txt  CableSwig.cxx  CableSwig.h  CableSwigModule.h  cable.cxx  cableSwigMain.cxx  cableSystemTools.cxx  cableSystemTools.h  cableidx.cxx
Expat/: CMakeLists.txt  expat.h
GCCPatch/gcc/: CMakeLists.txt  auto-host.h.in  configargs.h.in  diagnostic.c  libintl.h.in  tm_p.h.in
GCCPatch/gcc/config/: svr4.h
GCCPatch/gcc/cp/: CMakeLists.txt  lex.c
Generators/: CMakeLists.txt  cableCvTypeWriter.cxx  cableCvTypeWriter.h  cableGenerator.cxx  cableGenerator.h  cableTclGenerator.cxx  cableTclGenerator.h  genCvTypeGenerator.cxx  genGeneratorBase.cxx  genGeneratorBase.h  genTclGenerator.cxx  genTclGenerator.h
Parsers/: CMakeLists.txt  cableArrayType.cxx  cableArrayType.h  cableClass.cxx  cableClass.h  cableClassType.cxx  cableClassType.h  cableConfigurationParser.cxx  cableConfigurationParser.h  cableConfigurationRepresentation.cxx  cableConfigurationRepresentation.h  cableConstructor.cxx  cableConstructor.h  cableContext.cxx  cableContext.h  cableConverter.cxx  cableConverter.h  cableDestructor.cxx  cableDestructor.h  cableEnumeration.cxx  cableEnumeration.h  cableEnumerationType.cxx  cableEnumerationType.h  cableField.cxx  cableField.h  cableFunction.cxx  cableFunction.h  cableFunctionType.cxx  cableFunctionType.h  cableFundamentalType.cxx  cableFundamentalType.h  cableIndent.cxx  cableIndent.h  cableMethod.cxx  cableMethod.h  cableMethodType.cxx  cableMethodType.h  cableNamed.cxx  cableNamed.h  cableNamespace.cxx  (+38 more)
SWIG/: CABLESWIG_CHANGELOG  CMakeLists.txt  Makefile.in  README  SWIGConfig.cmake.in  TODO  configure
SWIG/CMake/: FindGuile.cmake  FindPHP4.cmake  FindPerlLibs.cmake  FindPike.cmake  FindPythonLibs.cmake  Macros.cmake  UsingSwig.cmake
SWIG/Doc/Devel/: engineering.html  internals.html
SWIG/Doc/Manual/: Java.html  Ruby.html
SWIG/Examples/: index.html
SWIG/Examples/GIFPlot/: configure
SWIG/Examples/java/: index.html
SWIG/Examples/perl5/: index.html
SWIG/Examples/python/: index.html
SWIG/Examples/ruby/: index.html
SWIG/Examples/tcl/: index.html
SWIG/Examples/test-suite/: common.mk
SWIG/Lib/: CMakeLists.txt  carrays.i  cdata.i  cmalloc.i  common.swg  cpointer.i  exception.i  math.i  swig.swg
SWIG/Lib/guile/: guilemain.i  interpreter.i  list-vector.i  pointer-in-out.i  ports.i  typemaps.i
SWIG/Lib/java/: CMakeLists.txt
SWIG/Lib/mzscheme/: typemaps.i
SWIG/Lib/ocaml/: cstring.i  typemaps.i
SWIG/Lib/perl5/: Makefile.in  perlmain.i  perlrun.swg
SWIG/Lib/python/: CMakeLists.txt  Makefile.in  cstring.i  pyprimtypes.swg  pyrun.swg  pystrings.swg
SWIG/Lib/ruby/: typemaps.i
SWIG/Lib/tcl/: CMakeLists.txt  Makefile.in  cstring.i  std_vector.i  swigtcl8.swg  tcl8.swg  tclsh.i  wish.i
SWIG/Source/: CMakeLists.txt
SWIG/Source/CParse/: CMakeLists.txt  Makefile.in  cparse.h  cscanner.c  parser.c  parser.c.in  parser.h  parser.h.in  parser.y  templ.c  util.c
SWIG/Source/DOH/: CMakeLists.txt  base.c  configure  doh.h  dohint.h  file.c  fio.c  hash.c  list.c  memory.c  string.c  void.c
SWIG/Source/Include/: swigconfig.h.cmake.in  swigconfig.h.in
SWIG/Source/Modules/: allocate.cxx  browser.cxx  chicken.cxx  contract.cxx  csharp.cxx  directors.cxx  emit.cxx  guile.cxx  java.cxx  lang.cxx  main.cxx  module.cxx  mzscheme.cxx  (+13 more)
SWIG/Tools/: configure
Testing/InsightWrapping/: CMakeLists.txt
Testing/Module/: CMakeLists.txt  bar.h  foo.h  module.h  module.tcl
Testing/SimpleTemplate/: CMakeLists.txt  simpleTemplate.h  string.tcl  test.tcl
Testing/String/: CMakeLists.txt  string.tcl  stringConfig.cxx
WrapTclFacility/: CMakeLists.txt  pkgIndex.tcl.build  pkgIndex.tcl.install  pkgIndex.tcl.unix  pkgIndex.tcl.win32  wrapCalls.cxx  wrapCalls.h  wrapCalls.txx  wrapClassWrapper.cxx  wrapClassWrapper.h  wrapConfigureTclPackages.cmake  wrapConstructor.cxx  wrapConstructor.h  wrapCxxObject.cxx  wrapFunction.cxx  wrapFunction.h  wrapFunctionBase.cxx  wrapFunctionSelector.cxx  wrapFunctionWrapper.cxx  wrapFunctionWrapper.h  wrapMethod.cxx  wrapMethod.h  wrapStaticMethod.h  wrapTclCxxObject.cxx  wrapTypeInfo.cxx  wrapTypeInfo.h  wrapUtils.h  wrapWrapperFacility.cxx  wrapWrapperFacility.h  wrapWrapperInclude.h
gcc/: CMakeLists.txt  auto-host.h.in  builtins.c  config.h.in  cppinit.c  cpplib.c  dbxout.c  diagnostic.c  dwarf2out.c  ggc-page.c  optabs.c  system.h  tm.h.in  varasm.c
gcc/cp/: CMakeLists.txt  Make-lang.in  cp-tree.h  decl.c  decl2.c  lang-options.h  semantics.c
libiberty/: CMakeLists.txt  config.h.in
(+230 files in other folders)
